force-app/main/default/objects/RempalcementProduits__c/RempalcementProduits__c.object-meta.xml
<CustomObject>
    <label>Remplacement Produits</label>
    <nameField>
        <displayFormat>Replace-{0000}</displayFormat>
        <label>N° Remplacement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remplacements Produits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>