force-app/main/default/objects/RempalcementProduits__c/fields/Devis__c.field-meta.xml
<CustomField>
    <fullName>Devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Devis</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Remplacements Produits</relationshipLabel>
    <relationshipName>RemplacementsProduits</relationshipName>
    <type>Lookup</type>
</CustomField>