force-app/main/default/objects/RempalcementProduits__c/fields/Equipement__c.field-meta.xml
<CustomField>
    <fullName>Equipement__c</fullName>
    <label>Pièce détachée</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Remplacements Produits</relationshipLabel>
    <relationshipName>RemplacementProduits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>