force-app/main/default/objects/RempalcementProduits__c/fields/EquipementInstalle__c.field-meta.xml
<CustomField>
    <fullName>EquipementInstalle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement installé</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Remplacements des pièces</relationshipLabel>
    <relationshipName>Remplacements_Produits</relationshipName>
    <type>Lookup</type>
</CustomField>