force-app/main/default/objects/RempalcementProduits__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Remplacements Produits</relationshipLabel>
    <relationshipName>Remplacements_Produits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>