force-app/main/default/objects/RempalcementProduits__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Article</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Remplacements Produits</relationshipLabel>
    <relationshipName>Remplacements_Produits</relationshipName>
    <type>Lookup</type>
</CustomField>